--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Payment Wallet</string>
+    <string name="app_name">PayRoka</string>
 
     <string name="Rs">\u20B9</string>
 
